# cookiecutter-python-app

./: .gitignore  LICENSE  README.md  cookiecutter.json
.circleci/: config.yml
.github/workflows/: code-qa.yml
hooks/: post_gen_project.py
tests/: test_project.py
{{cookiecutter.project_slug}}/: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CODEOWNERS  Dockerfile  README.md  pyproject.toml  setup.cfg
{{cookiecutter.project_slug}}/.circleci/: config.yml
{{cookiecutter.project_slug}}/.github/: CODEOWNERS  pull-request-template.md
{{cookiecutter.project_slug}}/requirements/: base.txt  development.txt
{{cookiecutter.project_slug}}/tests/: conftest.py
{{cookiecutter.project_slug}}/{{cookiecutter.app_name}}/: main.py
{{cookiecutter.project_slug}}/{{cookiecutter.app_name}}/core/config/: logging.py  settings.py
