{%- if cookiecutter.python_package == 'y' -%}
[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

{% endif -%}
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

{% if cookiecutter.code_qa == 'ruff' -%}
[tool.ruff]
select = ["E", "F", "I"]
line-length = 100
target-version = "py311"
{% endif %}

[tool.pytest]
log_cli = true
log_cli_level = "info"
