{%- if cookiecutter.python_package == 'y' -%}
[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

{% endif -%}
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

{% if cookiecutter.code_qa == 'ruff' -%}
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
{% endif %}

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "info"
