[metadata]
name = {{ cookiecutter.project_slug }}
version = 0.0.1
author = Agreena Technology Limited
author_email = {{ cookiecutter.agreena_gh_team }}@agreena.com
license = Proprietary
description =
    {{ cookiecutter.project_short_description }}
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Agreena-ApS/{{ cookiecutter.project_slug }}
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: Other/Proprietary License
    Operating System :: POSIX :: Linux

[options]
packages = find:
include_package_data = true
python_requires = >=3.10
install_requires =
    pydantic[dotenv]

[options.extras_require]
dev =
    black
    {% if cookiecutter.code_qa == 'flake8' %}flake8
    {% endif -%}
    mypy
    {% if cookiecutter.freeze_requirements == 'y' %}pip-tools>=7.0
    {% endif -%}
    pre-commit
    {% if cookiecutter.code_qa == 'pylint' %}pylint
    {% endif -%}
    pytest
    pytest-cov
    {% if cookiecutter.code_qa == 'ruff' %}ruff
{% endif %}
[options.packages.find]
exclude =
    tests
